<?xml version="1.0"?>
<package format="3">
  <name>commons</name>
  <version>0.1.0</version>
  <description>General-purpose ament_cmake commons library package for shared ROS 2 modules such as logger and utils.</description>

  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>spdlog</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>